fix sonar violations